# car24_go_admin_api_gateway/api/handlers/v1/mark.go
@@ -13,21 +13,21 @@ import (
 )
 
 // @Security ApiKeyAuth
-// @Router /v1/car [post]
-// @Summary Create Car
-// @Description API for creating car
-// @Tags car
+// @Router /v1/mark [post]
+// @Summary Create Mark
+// @Description API for creating mark
+// @Tags mark
 // @Accept json
 // @Produce json
 // @Param Platform-Id header string true "platform-id" default(7d4a4c38-dd84-4902-b744-0488b80a4c01)
-// @Param Car body car24_car_service.CreateCarModel true "car"
+// @Param Mark body car24_car_service.CreateMarkModel true "mark"
 // @Success 201 {object} response.ResponseOK
 // @Failure 400 {object} response.ResponseError
 // @Failure 500 {object} response.ResponseError
-func (h *handlerV1) CreateCar(c *gin.Context) {
-	var car car24_car_service.CreateCarModel
+func (h *handlerV1) CreateMark(c *gin.Context) {
+	var mark car24_car_service.CreateMarkModel
 
-	err := c.ShouldBindJSON(&car)
+	err := c.ShouldBindJSON(&mark)
 	if HandleError(c, h.log, err, "error while binding body to model") {
 		return
 	}
@@ -38,17 +38,17 @@ func (h *handlerV1) CreateCar(c *gin.Context) {
 	}
 
 	id, _ := uuid.NewRandom()
-	car.ID = id.String()
+	mark.ID = id.String()
 	e := cloudevents.NewEvent()
 	e.SetID(uuid.New().String())
 	e.SetSource(c.FullPath())
-	e.SetType("v1.car_service.car.create")
-	err = e.SetData(cloudevents.ApplicationJSON, car)
+	e.SetType("v1.car_service.mark.create")
+	err = e.SetData(cloudevents.ApplicationJSON, mark)
 	if HandleError(c, h.log, err, "error while setting event data") {
 		return
 	}
 
-	err = h.kafka.Push("v1.car_service.car.create", e)
+	err = h.kafka.Push("v1.car_service.mark.create", e)
 	if HandleError(c, h.log, err, "error while publishing event") {
 		return
 	}
@@ -59,56 +59,56 @@ func (h *handlerV1) CreateCar(c *gin.Context) {
 }
 
 // @Security ApiKeyAuth
-// @Router /v1/car/{id} [get]
-// @Summary Get Car
-// @Description API for getting car
-// @Tags car
+// @Router /v1/mark/{id} [get]
+// @Summary Get Mark
+// @Description API for getting mark
+// @Tags mark
 // @Accept json
 // @Produce json
 // @Param Platform-Id header string true "platform-id" default(7d4a4c38-dd84-4902-b744-0488b80a4c01)
 // @Param id path string true "id"
-// @Success 200 {object} car24_car_service.CarModel
+// @Success 200 {object} car24_car_service.MarkModel
 // @Failure 400 {object} response.ResponseError
 // @Failure 500 {object} response.ResponseError
-func (h *handlerV1) GetCar(c *gin.Context) {
+func (h *handlerV1) GetMark(c *gin.Context) {
 	_ = h.MakeProxy(c, h.cfg.CarServiceURL, c.Request.URL.Path)
 }
 
 // @Security ApiKeyAuth
-// @Router /v1/car [get]
-// @Summary Get cars
+// @Router /v1/mark [get]
+// @Summary Get marks
 // @Description API for getting all cars
-// @Tags car
+// @Tags mark
 // @Accept json
 // @Produce json
-// @Param find query car24_car_service.CarQueryParamModel false "filters"
-// @Success 200 {object} car24_car_service.CarListModel
+// @Param find query car24_car_service.MarkQueryParamModel false "filters"
+// @Success 200 {object} car24_car_service.MarkListModel
 // @Failure 400 {object} response.ResponseError
 // @Failure 500 {object} response.ResponseError
-func (h *handlerV1) GetAllCars(c *gin.Context) {
+func (h *handlerV1) GetAllMarks(c *gin.Context) {
 
 	_ = h.MakeProxy(c, h.cfg.CarServiceURL, c.Request.URL.Path)
 }
 
 // @Security ApiKeyAuth
-// @Router /v1/car/{id} [put]
-// @Summary Update Car
-// @Description API for updating car
-// @Tags car
+// @Router /v1/mark/{id} [put]
+// @Summary Update Mark
+// @Description API for updating mark
+// @Tags mark
 // @Accept json
 // @Produce json
 // @Param Platform-Id header string true "platform-id" default(7d4a4c38-dd84-4902-b744-0488b80a4c01)
 // @Param id path string true "id"
-// @Param Car body car24_car_service.UpdateCarModel true "car"
+// @Param Mark body car24_car_service.UpdateMarkModel true "mark"
 // @Success 201 {object} response.ResponseOK
 // @Failure 400 {object} response.ResponseError
 // @Failure 500 {object} response.ResponseError
-func (h *handlerV1) UpdateCar(c *gin.Context) {
+func (h *handlerV1) UpdateMark(c *gin.Context) {
 	var (
-		car car24_car_service.UpdateCarModel
+		mark car24_car_service.UpdateMarkModel
 	)
 
-	err := c.ShouldBindJSON(&car)
+	err := c.ShouldBindJSON(&mark)
 	if HandleError(c, h.log, err, "error while binding body to model") {
 		return
 	}
@@ -118,18 +118,18 @@ func (h *handlerV1) UpdateCar(c *gin.Context) {
 		return
 	}
 
-	car.ID = c.Param("id")
+	mark.ID = c.Param("id")
 
 	e := cloudevents.NewEvent()
 	e.SetID(uuid.New().String())
 	e.SetSource(c.FullPath())
-	e.SetType("v1.car_service.car.update")
-	err = e.SetData(cloudevents.ApplicationJSON, car)
+	e.SetType("v1.car_service.mark.update")
+	err = e.SetData(cloudevents.ApplicationJSON, mark)
 	if HandleError(c, h.log, err, "error while setting event data") {
 		return
 	}
 
-	err = h.kafka.Push("v1.car_service.car.update", e)
+	err = h.kafka.Push("v1.car_service.mark.update", e)
 	if HandleError(c, h.log, err, "error while publishing event") {
 		return
 	}
@@ -140,10 +140,10 @@ func (h *handlerV1) UpdateCar(c *gin.Context) {
 }
 
 // @Security ApiKeyAuth
-// @Router /v1/car/{id} [delete]
-// @Summary Delete Car
-// @Description API for deleting car
-// @Tags car
+// @Router /v1/mark/{id} [delete]
+// @Summary Delete Mark
+// @Description API for deleting mark
+// @Tags mark
 // @Accept json
 // @Produce json
 // @Param Platform-Id header string true "platform-id" default(7d4a4c38-dd84-4902-b744-0488b80a4c01)
@@ -151,7 +151,7 @@ func (h *handlerV1) UpdateCar(c *gin.Context) {
 // @Success 201 {object} response.ResponseOK
 // @Failure 400 {object} response.ResponseError
 // @Failure 500 {object} response.ResponseError
-func (h *handlerV1) DeleteCar(c *gin.Context) {
+func (h *handlerV1) DeleteMark(c *gin.Context) {
 	var (
 		request car24_car_service.DeleteCarModel
 	)
@@ -166,13 +166,13 @@ func (h *handlerV1) DeleteCar(c *gin.Context) {
 	e := cloudevents.NewEvent()
 	e.SetID(uuid.New().String())
 	e.SetSource(c.FullPath())
-	e.SetType("v1.car_service.car.delete")
+	e.SetType("v1.car_service.mark.delete")
 	err = e.SetData(cloudevents.ApplicationJSON, request)
 	if HandleError(c, h.log, err, "error while setting event data") {
 		return
 	}
 
-	err = h.kafka.Push("v1.car_service.car.delete", e)
+	err = h.kafka.Push("v1.car_service.mark.delete", e)
 	if HandleError(c, h.log, err, "error while publishing event") {
 		return
 	}
